@@ -5,6 +5,7 @@
 #include "presence.h"
 #include "gateway-connection.h"
 #include "chat-protocol.h"
+#include "server-event.h"
 
 struct i_silc_presence {
 	struct presence presence;
@@ -19,9 +20,8 @@ struct presence *i_silc_presence_init(struct gateway_connection *gwconn,
 		const char *name);
 void i_silc_presence_deinit(struct presence *presence);
 
-void i_silc_presence_change_request(struct local_presence *lpresence,
-		struct event *event, presence_change_request_callback_t *cb,
-		void *context);
+void i_silc_presence_change_request(struct presence *presence,
+		struct event *event);
 void i_silc_presence_status_request(struct presence *presence,
 		const char *const *status_fields,
 		presence_status_request_callback_t *cb, void *context);
